# multi_grid

./: CMakeLists.txt  README.md  main.c  multi_grid.c  multi_grid.h  operators.c  operators.h  plot.py  plot2.py  solve_block.c  solve_block.h  stuff.h
helpers/: CMakeLists.txt  N_len.c  N_len.h  operators.c  operators.h  solve_thread.c  solve_thread.h
multi_grid/: CMakeLists.txt  multi_grid.c  multi_grid.h  operators.c  operators.h
tSolver/: CMakeLists.txt  tSolver.c  tSolver.h
